# NetWatcher

./: .gitignore  .gitignore.rust-flutter.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FORCE_NETWATCHER_ICON_REBUILD.cmd  ICON_FIX_VALIDATION.json  LICENSE  NETWATCHER_4.0.1_STABLE_MANIFEST.json  NETWATCHER_4.0.2_STABLE_MANIFEST.json  NETWATCHER_4.0.3_STABLE_MANIFEST.json  NETWATCHER_4_STABLE_MANIFEST.json  PRIVACY.md  README.md  RELEASE_NOTES_2.2.0.md  RELEASE_NOTES_2.2.1.md  RELEASE_NOTES_2.2.2.md  RELEASE_NOTES_2.2.3.md  RELEASE_NOTES_2.2.4.md  RELEASE_NOTES_2.2.5.md  RELEASE_NOTES_2.2.6.md  RELEASE_NOTES_2.2.7.md  RELEASE_NOTES_3.0.0.md  RELEASE_NOTES_3.0.0_RC1.md  RELEASE_NOTES_4.0.0.md  RELEASE_NOTES_4.0.1.md  RELEASE_NOTES_4.0.2.md  RELEASE_NOTES_4.0.3.md  RELEASE_NOTES_4.0.4.md  RUST_FLUTTER_MIGRATION.md  RUST_FLUTTER_PREVIEW3_MANIFEST.json  SECURITY.md  TEST_REPORT.md  WAILS_MIGRATION.md  access_proxy.go  access_proxy_test.go  access_window_windows.go  access_windows.go  advanced_reports.go  advanced_reports_test.go  (+25 more)
.github/: pull_request_template.md
docs/: RELEASING.md
flutter_app/: pubspec.yaml
installer/: NetWatcher.iss
next/: README.md  TEST_REPORT_RC1.md  app.go  go.mod  main.go  tray_other.go  tray_windows.go  wails.json
rust_core/: Cargo.toml
rust_core/src/: config.rs  lib.rs  main.rs  models.rs  monitor.rs  platform.rs  reports.rs  statistics.rs  storage.rs  targets.rs
scripts/: apply-rust-flutter-gitignore.ps1  build-portable-preview.ps1  build-stable-release.ps1  build-wails.ps1  build.ps1  prepare-flutter-windows.ps1  (+3 more)
(+77 files in other folders)
