[package]
name = "netwatcher_core"
version = "4.0.0"
edition = "2021"
license = "MIT"
description = "Rust monitoring and report core for NetWatcher"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
url = "2"
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
